--- a/stockEngine/templates/registration/login.html
+++ b/stockEngine/templates/registration/login.html
@@ -2,8 +2,8 @@
 {% load crispy_forms_tags %}
 
 {% block auth %}
-<h1>QuestionTime</h1>
-<p class="lead text-muted">Share Your Knowledge</p>
+<h1>stockEngine</h1>
+<p class="lead text-muted">Find Up-To-Date Info for Stocks</p>
 <div class="login-form-container">
     <form method="POST">
         {% csrf_token %}
