--- a/stockEngine/templates/index.html
+++ b/stockEngine/templates/index.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block style %}
-    <link rel="stylesheet" href="{% static 'bundle.css' %}"
+    <link rel="stylesheet" href="{% static 'bundle.css' %}">
 {% endblock %}
 
 {% block content %}
